--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,11 @@
 ---
-# tasks file for roles/nfs-mount
+- name: Include family related vars
+  include_vars: "{{ ansible_os_family }}.yml"
 
 - name: Install NFS mount utility
-  become: yes
-  yum:
-    name: nfs-utils
+  become: true
+  package:
+    name: "{{ nfs_package }}"
     state: present
 
 # Do not create mountpoint using file, the mount module will create it
@@ -12,9 +13,9 @@
 # permissions on an existing directory
 
 - name: Mount NFS share
-  become: yes
+  become: true
   mount:
-    fstype: nfs4
+    fstype: "{{ item.nfs_version | default(nfs_version) }}"
     name: "{{ item.path }}"
     opts: "{{ item.opts | default(nfs_mount_opts) }}"
     src: "{{ item.location }}"
